deploy&svc3-medilab.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy3-medilab
  namespace: medilab
spec:
  selector:
    matchLabels:
      app: deploy3-medilab
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: deploy3-medilab
    spec:
      containers:
      - name: deploy3-medilab
        image: satyasandeep901/medilabproject:1
        resources:
          requests:
              memory: 512Mi
              cpu: 0.5

---
apiVersion: v1
kind: Service
metadata:
  name: deploy3-medilab-svc
  namespace: medilab

spec:

  selector:
    app: deploy3-medilab

  ports:
    - name: http
      port: 8080

  type: ClusterIP
