deploy&svc4-game.yml
apiVersion: v1
kind: Namespace
metadata:
  name: game-ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx3-ingress
  namespace: game-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: satyasaisandeep.shop
    http:
      paths:
      - pathType: Prefix
        path: "/gameoflife"
        backend:
          service:
            name: deploy4-svc
            port:
              number: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy4
  namespace: game-ingress
spec:
  selector:
    matchLabels:
      app: deploy4
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: deploy4
    spec:
      containers:
      - name: deploy4
        image: satyasandeep901/medilabproject:1
        resources:
          requests:
              memory: 512Mi
              cpu: 0.5

---
apiVersion: v1
kind: Service
metadata:
  name: deploy4-svc
  namespace: game-ingress

spec:

  selector:
    app: deploy4

  ports:
    - name: http
      port: 8080

  type: ClusterIP
