ingress2.yml
apiVersion: v1
kind: Namespace
metadata:
  name: loginapp
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx2-ingress
  namespace: loginapp
spec:
  ingressClassName: nginx
  rules:
  - host: satyasaisandeep.shop
    http:
      paths:
      - pathType: Prefix
        path: "/sandeep"
        backend:
          service:
            name: deploy2-loginapp-svc
            port:
              number: 8080
