ingress3.yml
apiVersion: v1
kind: Namespace
metadata:
  name: medilab
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx3-ingress
  namespace: medilab
spec:
  ingressClassName: nginx
  rules:
  - host: satyasaisandeep.shop
    http:
      paths:
      - pathType: Prefix
        path: "/satyasaisandeep"
        backend:
          service:
            name: deploy3-medilab-svc
            port:
              number: 8080
